Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113029

Android: declarative-camera example: Captured image is not rotated for landscape orientation

XMLWordPrintable

    • Android
    • 2bcc7235c (dev), 1ed211275 (6.5), 3da2f1ca9 (tqtc/lts-6.2)
    • 2023wk18FOQtforAndroid

      Run the examples/multimedia/declarative-camera on an Android device, grant permissions for writing to storage, rotate device to landscape and capture a photo. The result is a photo without rotation for landscape orientation.

        1. image_0010.jpg
          1.27 MB
          Tuomas Vaarala
        For Gerrit Dashboard: QTBUG-113029
        # Subject Branch Project Status CR V

            bartlomiejmoskal Bartlomiej Moskal
            tuomas.vaarala Tuomas Vaarala
            Votes:
            3 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes